--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,3 +1,30 @@
+body{
+  padding: 0;
+  margin: 0;
+  background-image: url(../img/java-programming-wallpaper-20.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
   width: 100%; /* Full width */
